<resources>
    <string name="app_name">Asesorias FIC</string>
    <string name="nombre_nav_asesorias_en_curso">Asesorias en curso</string>
    <string name="nombre_nav_solicitudes_pendientes">Solicitudes pendientes</string>
    <string name="nombre_nav_reportes">Reportes</string>
    <string name="nombre_nav_asesores_diciplinares">Asesores disciplinares</string>
    <string name="nombre_nav_asesores_par">Asesores par</string>
    <string name="nombre_nav__estudiantes">Estudiantes</string>
    <string name="nombre_nav_cerrar_sesion">Cerrar Sesion</string>
    <string name="nombre_nav_historial_asesorias">Historial de asesorias</string>
    <string name="nombre_nav_solicitar_asesoria">Solicitar asesoria</string>
    <string name="nombre_nav_solicitudes_revision">Solicitudes en revision</string>

    <string name="open_navigation_drower">Open</string>
    <string name="close_navigation_drower">Close</string>
    <string name="btn_crearAsesoria">Crear Asesoria</string>
    <string name="texto_btn_infoAsesorias">Info</string>
    <string name="texto_btn_completarAsesoria">Completada</string>
    <string name="tecto_btn_material_adicional">Material Adicional</string>

    <string name="textoInputCuenta">No. Cuenta</string>
    <string name="btn_ingresar">Ingresar</string>


    <string name="id_Text1">Asesores Disiplinares</string>
    <string name="id_tvbuscar">Buscar</string>
    <string name="crear_asesor">Crear Asesor</string>
    <string name="text2">Magali</string>
    <string name="text3">Alfredo</string>
    <string name="text4">alfredo</string>
</resources>