<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InicioActivity">

    <ScrollView
        android:id="@+id/scrollViewTarjetas"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_crearAsesoria"
        android:padding="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"

            >

            <androidx.cardview.widget.CardView
                android:id="@+id/tarjetaAsesoriasEnCurso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="12dp"
                app:cardBackgroundColor="@color/azulUAS"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:gravity="center_horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Alumno: Jose Angel Asstorga Mejia"
                            android:textColor="@color/white"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Materia: Programación"
                            android:textColor="@color/white"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Fecha de Inicio: 25/SEP/2025"
                            android:textColor="@color/white"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Horario: 18:00-19:00"
                            android:textColor="@color/white"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Modalidad: Virtual"
                            android:textColor="@color/white"
                            />

                    </LinearLayout>


                    
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_marginTop="10dp"

                        >
                        
                        <Button
                            android:id="@+id/btn_infoAsesorias"
                            android:layout_width="140dp"
                            android:layout_height="40dp"
                            android:text="@string/texto_btn_infoAsesorias"
                            app:backgroundTint="@color/botonAzulClaro"
                            android:background="@drawable/style_botones_assurso"
                            android:layout_marginEnd="20dp"
                            />

                        <Button
                            android:id="@+id/btn_completarAsesoria"
                            android:layout_width="140dp"
                            android:layout_height="40dp"
                            android:text="@string/texto_btn_completarAsesoria"
                            app:backgroundTint="@color/botonVerder"
                            android:background="@drawable/style_botones_assurso"
                            />

                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_materialAdicional"
                        android:layout_width="140dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/tecto_btn_material_adicional"
                        app:backgroundTint="@color/amarilloUAS"
                        android:background="@drawable/style_botones_assurso"

                        />

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="12dp"
                app:cardBackgroundColor="@color/azulUAS"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:gravity="center_horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Alumno: Jose Angel Asstorga Mejia"
                            android:textColor="@color/white"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Materia: Programación"
                            android:textColor="@color/white"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Fecha de Inicio: 25/SEP/2025"
                            android:textColor="@color/white"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Horario: 18:00-19:00"
                            android:textColor="@color/white"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Modalidad: Virtual"
                            android:textColor="@color/white"
                            />

                    </LinearLayout>



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_marginTop="10dp"

                        >

                        <Button

                            android:layout_width="140dp"
                            android:layout_height="40dp"
                            android:text="@string/texto_btn_infoAsesorias"
                            app:backgroundTint="@color/botonAzulClaro"
                            android:background="@drawable/style_botones_assurso"
                            android:layout_marginEnd="20dp"
                            />

                        <Button

                            android:layout_width="140dp"
                            android:layout_height="40dp"
                            android:text="@string/texto_btn_completarAsesoria"
                            app:backgroundTint="@color/botonVerder"
                            android:background="@drawable/style_botones_assurso"
                            />

                    </LinearLayout>

                    <Button

                        android:layout_width="140dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/tecto_btn_material_adicional"
                        app:backgroundTint="@color/amarilloUAS"
                        android:background="@drawable/style_botones_assurso"

                        />

                </LinearLayout>


            </androidx.cardview.widget.CardView>


        </LinearLayout>


    </ScrollView>


    <Button
        android:id="@+id/btn_crearAsesoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/btn_crearAsesoria"
        app:backgroundTint="@color/botonVerder"
        android:background="@drawable/style_botones_assurso"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="40dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>